--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,12 @@ body {
     background: #222;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+    font: inherit;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
@@ -24,7 +30,8 @@ input, button {
     box-sizing: content-box;
     transition: all 250ms ease;
 }
-input:focus, button:focus {
+
+input:focus, button:focus, a:focus {
     outline: 3px dashed #ee4540;
 }
 
