--- a/frontend/src/containers/ContentContainer/ContentContainer.css
+++ b/frontend/src/containers/ContentContainer/ContentContainer.css
@@ -1,18 +1,7 @@
 .content-container {
     float: left;
-    width: calc(100% - 300px);
-    height: 100vh;
-}
-
-.page-title {
-    font-size: 32px;
+    width: calc(100% - 348px);
+    height: calc(100vh - 48px);
+    max-height: calc(100vh - 48px);
     padding: 24px;
-    margin: 24px;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-}
-
-.page-content {
-    max-height: calc(100vh - 210px);
-    padding: 24px;
-    margin: 24px;
 }
