--- a/frontend/src/containers/LecturesPage/LecturesListElement/LecturesListElement.css
+++ b/frontend/src/containers/LecturesPage/LecturesListElement/LecturesListElement.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     padding: 16px;
     margin: 16px 0;
+    max-height: 50px;
     overflow: hidden;
     background: rgba(255, 255, 255, 0.05);
 }
