--- a/frontend/src/fonts/icons/style.css
+++ b/frontend/src/fonts/icons/style.css
@@ -1,30 +1,67 @@
 @font-face {
-    font-family: 'icomoon';
-    src: url('./icomoon.eot?fomu6a');
-    src: url('./icomoon.eot?fomu6a#iefix') format('embedded-opentype'),
-    url('./icomoon.ttf?fomu6a') format('truetype'),
-    url('./icomoon.woff?fomu6a') format('woff'),
-    url('./icomoon.svg?fomu6a#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
+  font-family: 'icons';
+  src:  url('./icons.eot?srd0jp');
+  src:  url('./icons.eot?srd0jp#iefix') format('embedded-opentype'),
+    url('./icons.ttf?srd0jp') format('truetype'),
+    url('./icons.woff?srd0jp') format('woff'),
+    url('./icons.svg?srd0jp#icons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: never;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icons' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  margin: 4px;
 
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-loading:before {
-    content: "\e900";
+.icon-error:before {
+  content: "\e900";
+}
+.icon-accept:before {
+  content: "\e901";
+}
+.icon-edit:before {
+  content: "\e902";
+}
+.icon-list:before {
+  content: "\e903";
+}
+.icon-loader:before {
+  content: "\e904";
+}
+.icon-log-in:before {
+  content: "\e905";
+}
+.icon-log-out:before {
+  content: "\e906";
+}
+.icon-message:before {
+  content: "\e907";
+}
+.icon-pen:before {
+  content: "\e908";
+}
+.icon-delete:before {
+  content: "\e909";
+}
+.icon-user:before {
+  content: "\e90a";
+}
+.icon-cancel:before {
+  content: "\e90b";
+}
+.icon-exchange:before {
+  content: "\e90c";
 }
