--- a/frontend/src/components/LectureElement/LectureElement.css
+++ b/frontend/src/components/LectureElement/LectureElement.css
@@ -9,9 +9,14 @@
     background: rgba(255, 255, 255, 0.05);
 }
 
+.lecture-element a {
+    flex-grow: 1;
+}
+
 .lecture-element-part {
     float: left;
     font-size: 20px;
+    line-height: 2em;
     padding: 0 24px;
 }
 
@@ -21,6 +26,7 @@
 
 .lecture-element-part:last-child {
     padding-right: 8px;
+    flex-grow: 1;
 }
 
 .lecture-element-id {
