--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,7 +23,7 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-input, button {
+input, button, textarea {
     border: 0;
     margin: 0;
     outline: 0;
@@ -35,8 +35,14 @@ input, button {
     transition: all 250ms ease;
 }
 
-input:focus, button:focus, a:focus {
+input:focus, button:focus, a:focus, textarea:focus {
     outline: 3px dashed #ee4540;
+}
+
+textarea {
+    max-width: 100%;
+    max-height: 300px;
+    background: rgba(255, 255, 255, 0.05);
 }
 
 button[disabled] {
