--- a/frontend/src/containers/LectureAddPage/LectureAddPage.css
+++ b/frontend/src/containers/LectureAddPage/LectureAddPage.css
@@ -1,13 +1,11 @@
-.lecture-add-page {
-    display: grid;
-    grid-auto-flow: row;
-    grid-gap: 16px;
+.page-title {
+    font-size: 2em;
 }
 
-.lecture-add-page div {
-    display: grid;
-    grid-auto-flow: column;
-    grid-gap: 16px;
-    align-items: center;
+.lecture-add-inputs {
+    display: flex;
     align-content: center;
+    justify-content: flex-start;
+    align-items: center;
+    grid-gap: 16px;
 }
