--- a/frontend/src/containers/LecturePage/LecturePage.css
+++ b/frontend/src/containers/LecturePage/LecturePage.css
@@ -71,3 +71,13 @@
     justify-content: flex-end;
     margin-top: 16px;
 }
+
+.lecture-signed {
+    display: grid;
+    justify-content: start;
+    align-content: center;
+    align-items: center;
+    justify-items: center;
+    grid-gap: 16px;
+    padding: 16px 0;
+}
