--- a/frontend/src/containers/LecturePage/LecturePage.css
+++ b/frontend/src/containers/LecturePage/LecturePage.css
@@ -1,31 +1,3 @@
-.lecture-box {
-    padding: 32px;
-    margin: 16px 0;
-    background: rgba(255, 255, 255, 0.05);
-}
-
-.lecture-box:first-child {
-    margin-top: 0;
-}
-
-.lecture-box-bar {
-    display: grid;
-    position: relative;
-    align-content: center;
-    align-items: center;
-    margin-bottom: 24px;
-}
-
-.lecture-box-title {
-    font-size: 24px;
-}
-
-.lecture-box-bar-button {
-    position: absolute;
-    right: 0;
-    justify-content: right;
-}
-
 .lecture-name {
     font-size: 36px;
     letter-spacing: 1px;
@@ -80,4 +52,5 @@
     justify-items: center;
     grid-gap: 16px;
     padding: 16px 0;
+    grid-auto-flow: column;
 }
